force-app/main/default/objects/Patient__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <formula>20</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age/Sex</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>