force-app/main/default/objects/Patient__c/fields/Chief_Complaint__c.field-meta.xml
<CustomField>
    <fullName>Chief_Complaint__c</fullName>
    <label>Chief Complaint</label>
    <type>TextArea</type>
</CustomField>