force-app/main/default/objects/Patient__c/fields/Date_Of_Brith__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Brith__c</fullName>
    <label>Date Of Brith</label>
    <type>Date</type>
</CustomField>