force-app/main/default/objects/Patient__c/fields/Dental_History__c.field-meta.xml
<CustomField>
    <fullName>Dental_History__c</fullName>
    <label>Dental History</label>
    <type>TextArea</type>
</CustomField>