force-app/main/default/objects/Patient__c/fields/Finding__c.field-meta.xml
<CustomField>
    <fullName>Finding__c</fullName>
    <label>Finding</label>
    <type>TextArea</type>
</CustomField>