force-app/main/default/objects/Patient__c/fields/Medical_History__c.field-meta.xml
<CustomField>
    <fullName>Medical_History__c</fullName>
    <label>Medical History</label>
    <type>TextArea</type>
</CustomField>