force-app/main/default/objects/Patient__c/fields/Provisional_Diagnosis__c.field-meta.xml
<CustomField>
    <fullName>Provisional_Diagnosis__c</fullName>
    <label>Provisional Diagnosis</label>
    <type>TextArea</type>
</CustomField>