force-app/main/default/objects/Patient__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <inlineHelpText>Patient first entry start date(प्रवेश प्रारंभ तिथि)</inlineHelpText>
    <label>Entry Start Date</label>
    <type>Date</type>
</CustomField>