force-app/main/default/objects/Patient__c/fields/Total_Due_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Due_Amount__c</fullName>
    <inlineHelpText>Patient due amount</inlineHelpText>
    <label>Total Due Amount</label>
    <summarizedField>Payments__c.Due_Amount__c</summarizedField>
    <summaryForeignKey>Payments__c.Patient__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>