force-app/main/default/objects/Patient__c/fields/Total_Paid_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Paid_Amount__c</fullName>
    <inlineHelpText>Total paid amount by Patient</inlineHelpText>
    <label>Total Paid Amount</label>
    <summarizedField>Payments__c.Amount__c</summarizedField>
    <summaryForeignKey>Payments__c.Patient__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>