force-app/main/default/objects/Patient__c/recordTypes/IPD.recordType-meta.xml
<RecordType>
    <fullName>IPD</fullName>
    <active>true</active>
    <label>IPD</label>
</RecordType>