force-app/main/default/objects/Patient__c/recordTypes/OPD.recordType-meta.xml
<RecordType>
    <fullName>OPD</fullName>
    <active>true</active>
    <label>OPD</label>
</RecordType>