force-app/main/default/objects/Patient__c/validationRules/DOBValidationRule.validationRule-meta.xml
<ValidationRule>
    <fullName>DOBValidationRule</fullName>
    <active>true</active>
    <errorConditionFormula>Date_Of_Brith__c = TODAY()</errorConditionFormula>
    <errorMessage>To avoid DOB equal to TODAY!!!</errorMessage>
</ValidationRule>